# SmartQueue

./: .gitignore  LICENSE  README.md  plans.md  questions.md  roadmap.md  start.sh
.github/workflows/: ci.yml
db/migrations/: 001_init.sql  003_users.sql  004_organizations.sql  005_worker_registry.sql  006_leader_election.sql
docker/: docker-compose.yml  prometheus.yml
docker/grafana/provisioning/datasources/: dashboard.yml
docs/: API.md  DATABASE.md  DEMO.md  DEMO_SCRIPT.md  DEPLOYMENT.md  README.md  steps.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/components/: Topbar.tsx
frontend/app/login/: page.tsx
frontend/docs/: ARCHITECTURE.md  ML_MODEL.md
k8s/: namespace.yaml  secrets.yaml
k8s/api/: deployment.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/postgres/: deployment.yaml  service.yaml
k8s/predictor/: deployment.yaml  service.yaml
k8s/scheduler/: deployment.yaml  service.yaml
k8s/worker/: deployment.yaml  hpa.yaml
services/api/: .env  Dockerfile  pyproject.toml
services/api/app/: auth.py  database.py  main.py  models.py
services/api/app/routers/: analytics.py  auth.py  jobs.py  metrics_collector.py  orgs.py
services/predictor/: Dockerfile  app.py  generate_data.py  model.npz  predictor.py  train.py
services/scheduler/: Dockerfile  package-lock.json  package.json  tsconfig.json
services/scheduler/src/: dispatcher.ts  index.ts  queue.ts
services/worker/: Dockerfile  worker.py
