[project]
name = "smartqueue-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "slowapi>=0.1.9",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "prometheus-client>=0.20.0",
]